fix: 修复EmailService现存bug